--- a/src/main/resources/db/changelog/db.changelog-master.yaml
+++ b/src/main/resources/db/changelog/db.changelog-master.yaml
@@ -22,3 +22,11 @@ databaseChangeLog:
         - sqlFile:
             path: migrations/003-create-table-usuarios-perfil.sql
             relativeToChangelogFile: true
+
+  - changeSet:
+      id: 4
+      author: Gilberto_Junior
+      changes:
+        - sqlFile:
+            path: migrations/004-create-table-servicos.sql
+            relativeToChangelogFile: true
