:sparkles:	feat: Novas tabelas no banco de dados

--- a/src/main/resources/db/changelog/db.changelog-master.yaml
+++ b/src/main/resources/db/changelog/db.changelog-master.yaml
@@ -30,3 +30,27 @@ databaseChangeLog:
         - sqlFile:
             path: migrations/004-create-table-servicos.sql
             relativeToChangelogFile: true
+
+  - changeSet:
+      id: 5
+      author: Gilberto_Junior
+      changes:
+        - sqlFile:
+            path: migrations/005-create-table-tipos-status-atendimento.sql
+            relativeToChangelogFile: true
+
+  - changeSet:
+      id: 6
+      author: Gilberto_Junior
+      changes:
+        - sqlFile:
+            path: migrations/006-create-table-tipos-status-pagamento.sql
+            relativeToChangelogFile: true
+
+  - changeSet:
+      id: 7
+      author: Gilberto_Junior
+      changes:
+        - sqlFile:
+            path: migrations/007-create-table-tipos-metodos-pagamento.sql
+            relativeToChangelogFile: true
