--- a/src/main/resources/db/changelog/db.changelog-master.yaml
+++ b/src/main/resources/db/changelog/db.changelog-master.yaml
@@ -54,3 +54,11 @@ databaseChangeLog:
         - sqlFile:
             path: migrations/007-create-table-tipos-metodos-pagamento.sql
             relativeToChangelogFile: true
+
+  - changeSet:
+      id: 8
+      author: Gilberto_Junior
+      changes:
+        - sqlFile:
+            path: migrations/008-create-table-atendimentos.sql
+            relativeToChangelogFile: true
